<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    
    <!-- <include layout="@layout/titlebar_layout" /> -->
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:background="@drawable/background">
        
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/header_view"
            android:textSize="14sp"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:padding="5dp"
            android:text="@string/add_label" />
        
        <TextView
		    android:id="@+id/addCustomLabel"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:paddingLeft="5dp"
		    android:paddingRight="5dp"
		    android:paddingTop="10dp"
		    android:paddingBottom="10dp"
		    android:drawableRight="@drawable/cell_accessory"
		    android:textColor="@color/dark_text"
		    android:textSize="18sp"
		    android:textStyle="bold" 
		    android:background="@drawable/list_item_background"
		    android:clickable="true"
		    android:text="@string/add_custom_label" />
        
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/header_view"
            android:textSize="14sp"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:padding="5dp"
            android:text="@string/user_labels" />
        
        <RelativeLayout 
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        
	        <ListView
	            android:id="@+id/labelsList"
	            android:layout_width="match_parent"
	            android:layout_height="match_parent" 
	            android:listSelector="@drawable/list_item_background"
	            android:cacheColorHint="@android:color/transparent" 
	            android:divider="@drawable/list_item_divider"/>
	        
	        <TextView
	            android:id="@+id/empty"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:padding="10dp"
	            android:layout_centerInParent="true"
	            android:textColor="@color/dark_text"
	            android:textSize="18sp"
	            android:textStyle="bold"
	            android:gravity="center_horizontal"
	            android:text="@string/empty_labels" />
        
        </RelativeLayout>
        
    </LinearLayout>

</LinearLayout>